--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "pr-skills-extractor",
-  "version": "1.0.0",
-  "description": "Extract knowledge from PR review comments into Claude Code Skills",
+  "version": "1.1.0",
+  "description": "Extract knowledge from PR review comments into Claude Code Skills following best practices",
   "main": "scripts/process-comment.js",
+  "bin": {
+    "validate-skills": "./scripts/validate-skills.js"
+  },
   "scripts": {
+    "process": "node scripts/process-comment.js",
+    "validate": "node scripts/validate-skills.js",
+    "validate:all": "node scripts/validate-skills.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -11,7 +17,8 @@
     "code-review",
     "skills",
     "claude",
-    "ai"
+    "ai",
+    "best-practices"
   ],
   "author": "",
   "license": "MIT",
